Fix z-index.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,2 +1,5 @@
-
+.app-container {
+  position: relative;
+  z-index: 600;
+}
 
