--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 300;
   background-color: white;
   border-bottom-width: 1px;
   border-bottom-color: rgb(231, 227, 227);
@@ -84,7 +84,6 @@
   transition: opacity 0.15s;
   pointer-events: none;
   white-space: nowrap;
-  z-index: 6000;
 }
 
 .search-button:hover .tooltip,
@@ -93,7 +92,9 @@
 .youtube-app-icon-contanier:hover .tooltip,
 .notification-icon-container:hover .tooltip,
 .settings-icon-container:hover .tooltip {
-  opacity: 1;
+  opacity: 0.9;
+  /* position: relative; */
+  z-index: 600;
 }
 
 .voice-button {
